// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chc file snapshot 1`] = `
[
  {
    "dataType": "DLS measurement",
    "id": "1",
    "meta": {
      "%Pd Peak 1 (Percent)": 28.4,
      "%Pd Peak 2 (Percent)": 0,
      "%Pd Peak 3 (Percent)": 0,
      "Attenuator": 9,
      "Derived Count Rate (kcps)": 2683,
      "Dispersant Name": "Water",
      "Dispersant RI": 1.33,
      "Dispersant Viscosity (cP)": 0.8872,
      "Duration (s)": 10,
      "Intensity Mean (d.nm)": 116.1,
      "Intensity Peak 1 (d.nm)": 116.1,
      "Intensity Peak 2 (d.nm)": 0,
      "Intensity Peak 3 (d.nm)": 0,
      "Intensity Width Peak 1 (d.nm)": 32.94,
      "Intensity Width Peak 2 (d.nm)": 0,
      "Intensity Width Peak 3 (d.nm)": 0,
      "Intensity peak 1 (d.nm)": 116.1,
      "Intensity peak 2 (d.nm)": 0,
      "Intensity peak 3 (d.nm)": 0,
      "Intensity width peak 1 (d.nm)": 32.94,
      "Intensity width peak 2 (d.nm)": 0,
      "Intensity width peak 3 (d.nm)": 0,
      "Intercept": 0.941,
      "Material Absorption": 0.01,
      "Material Name": "Chitosan",
      "Material RI": 1.7,
      "Mean Count Rate (kcps)": 297.8,
      "Measured Intercept": 0.885,
      "Measurement Date and Time": "06 March 2026 14:50:12",
      "Number Mean (d.nm)": 78.38,
      "PdI": 0.112,
      "PdI Width (d.nm)": 36.11,
      "Quality Factor": 0,
      "Record": 1,
      "Result Origin": "Nano series",
      "S/W Version": 7.11,
      "Serial Number": "MAL1143160",
      "Size Runs": 10,
      "T (°C)": 25,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 0.8872,
      "Volume Mean (d.nm)": 99.31,
      "Z-Ave (d.nm)": 108,
      "Z-Average (d.nm)": 108,
      "cheminfo": {
        "meta": {
          "average": {
            "intensity": {
              "mean": {
                "units": "nm",
                "value": 116.1,
              },
            },
            "number": {
              "mean": {
                "units": "nm",
                "value": 78.38,
              },
            },
            "volume": {
              "mean": {
                "units": "nm",
                "value": 99.31,
              },
            },
          },
          "derivedMeanCountRate": {
            "units": "kcps",
            "value": 2683,
          },
          "distributions": [
            {
              "intensity": {
                "mean": {
                  "units": "nm",
                  "value": 116.1,
                },
                "standardDeviation": {
                  "units": "nm",
                  "value": 32.94,
                },
              },
              "number": {
                "mean": {
                  "units": "nm",
                  "value": 78.38,
                },
              },
              "volume": {
                "mean": {
                  "units": "nm",
                  "value": 99.31,
                },
              },
            },
          ],
          "intercept": 0.941,
          "polydispersityIndex": 0.112,
          "zAverage": {
            "units": "nm",
            "value": 108,
          },
        },
      },
      "pH": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1143160",
        "software": {
          "name": "Zetasizer Nano",
          "version": "7.11",
        },
      },
    },
    "title": "SD283 - F1, HBG6.4, 0h 1",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1.1,
          7.3,
          17.7,
          23.3,
          20.7,
          14.3,
          8.3,
          4.2,
          1.9,
          0.7,
          0.2,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 23.3,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.2,
          2.2,
          7.2,
          13.1,
          16.9,
          17.5,
          15.3,
          11.7,
          7.9,
          4.7,
          2.3,
          0.7,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 17.5,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.2,
          1.9,
          5.5,
          10.5,
          15.4,
          18.5,
          18.5,
          15.2,
          9.7,
          4.2,
          0.6,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 18.5,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
  {
    "dataType": "DLS measurement",
    "id": "2",
    "meta": {
      "%Pd Peak 1 (Percent)": 30.9,
      "%Pd Peak 2 (Percent)": 0,
      "%Pd Peak 3 (Percent)": 0,
      "Attenuator": 9,
      "Derived Count Rate (kcps)": 2674,
      "Dispersant Name": "Water",
      "Dispersant RI": 1.33,
      "Dispersant Viscosity (cP)": 0.8872,
      "Duration (s)": 10,
      "Intensity Mean (d.nm)": 119.4,
      "Intensity Peak 1 (d.nm)": 119.4,
      "Intensity Peak 2 (d.nm)": 0,
      "Intensity Peak 3 (d.nm)": 0,
      "Intensity Width Peak 1 (d.nm)": 36.91,
      "Intensity Width Peak 2 (d.nm)": 0,
      "Intensity Width Peak 3 (d.nm)": 0,
      "Intensity peak 1 (d.nm)": 119.4,
      "Intensity peak 2 (d.nm)": 0,
      "Intensity peak 3 (d.nm)": 0,
      "Intensity width peak 1 (d.nm)": 36.91,
      "Intensity width peak 2 (d.nm)": 0,
      "Intensity width peak 3 (d.nm)": 0,
      "Intercept": 0.941,
      "Material Absorption": 0.01,
      "Material Name": "Chitosan",
      "Material RI": 1.7,
      "Mean Count Rate (kcps)": 296.8,
      "Measured Intercept": 0.885,
      "Measurement Date and Time": "06 March 2026 14:51:54",
      "Number Mean (d.nm)": 67.67,
      "PdI": 0.116,
      "PdI Width (d.nm)": 36.9,
      "Quality Factor": 0,
      "Record": 2,
      "Result Origin": "Nano series",
      "S/W Version": 7.11,
      "Serial Number": "MAL1143160",
      "Size Runs": 10,
      "T (°C)": 25,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 0.8872,
      "Volume Mean (d.nm)": 97.57,
      "Z-Ave (d.nm)": 108.1,
      "Z-Average (d.nm)": 108.1,
      "cheminfo": {
        "meta": {
          "average": {
            "intensity": {
              "mean": {
                "units": "nm",
                "value": 119.4,
              },
            },
            "number": {
              "mean": {
                "units": "nm",
                "value": 67.67,
              },
            },
            "volume": {
              "mean": {
                "units": "nm",
                "value": 97.57,
              },
            },
          },
          "derivedMeanCountRate": {
            "units": "kcps",
            "value": 2674,
          },
          "distributions": [
            {
              "intensity": {
                "mean": {
                  "units": "nm",
                  "value": 119.4,
                },
                "standardDeviation": {
                  "units": "nm",
                  "value": 36.91,
                },
              },
              "number": {
                "mean": {
                  "units": "nm",
                  "value": 67.67,
                },
              },
              "volume": {
                "mean": {
                  "units": "nm",
                  "value": 97.57,
                },
              },
            },
          ],
          "intercept": 0.941,
          "polydispersityIndex": 0.116,
          "zAverage": {
            "units": "nm",
            "value": 108.1,
          },
        },
      },
      "pH": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1143160",
        "software": {
          "name": "Zetasizer Nano",
          "version": "7.11",
        },
      },
    },
    "title": "SD283 - F1, HBG6.4, 0h 2",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.4,
          7.1,
          10.3,
          13.5,
          16.9,
          16.9,
          13.6,
          9.1,
          5.3,
          2.8,
          1.3,
          0.6,
          0.2,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 16.9,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.3,
          1,
          2.2,
          4.6,
          8.5,
          12.5,
          14.9,
          15.1,
          13.3,
          10.5,
          7.6,
          5.1,
          2.9,
          1.2,
          0.2,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 15.1,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.1,
          0.2,
          0.7,
          2.3,
          5.4,
          9.5,
          13.7,
          16.7,
          17.3,
          15.3,
          11,
          6,
          1.9,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 17.3,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
  {
    "dataType": "DLS measurement",
    "id": "3",
    "meta": {
      "%Pd Peak 1 (Percent)": 34.1,
      "%Pd Peak 2 (Percent)": 0,
      "%Pd Peak 3 (Percent)": 0,
      "Attenuator": 9,
      "Derived Count Rate (kcps)": 2659.4,
      "Dispersant Name": "Water",
      "Dispersant RI": 1.33,
      "Dispersant Viscosity (cP)": 0.8872,
      "Duration (s)": 10,
      "Intensity Mean (d.nm)": 119.8,
      "Intensity Peak 1 (d.nm)": 119.8,
      "Intensity Peak 2 (d.nm)": 0,
      "Intensity Peak 3 (d.nm)": 0,
      "Intensity Width Peak 1 (d.nm)": 40.88,
      "Intensity Width Peak 2 (d.nm)": 0,
      "Intensity Width Peak 3 (d.nm)": 0,
      "Intensity peak 1 (d.nm)": 119.8,
      "Intensity peak 2 (d.nm)": 0,
      "Intensity peak 3 (d.nm)": 0,
      "Intensity width peak 1 (d.nm)": 40.88,
      "Intensity width peak 2 (d.nm)": 0,
      "Intensity width peak 3 (d.nm)": 0,
      "Intercept": 0.943,
      "Material Absorption": 0.01,
      "Material Name": "Chitosan",
      "Material RI": 1.7,
      "Mean Count Rate (kcps)": 295.2,
      "Measured Intercept": 0.89,
      "Measurement Date and Time": "06 March 2026 14:53:37",
      "Number Mean (d.nm)": 77.59,
      "PdI": 0.116,
      "PdI Width (d.nm)": 36.83,
      "Quality Factor": 0,
      "Record": 3,
      "Result Origin": "Nano series",
      "S/W Version": 7.11,
      "Serial Number": "MAL1143160",
      "Size Runs": 10,
      "T (°C)": 25,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 0.8872,
      "Volume Mean (d.nm)": 99.59,
      "Z-Ave (d.nm)": 108.2,
      "Z-Average (d.nm)": 108.2,
      "cheminfo": {
        "meta": {
          "average": {
            "intensity": {
              "mean": {
                "units": "nm",
                "value": 119.8,
              },
            },
            "number": {
              "mean": {
                "units": "nm",
                "value": 77.59,
              },
            },
            "volume": {
              "mean": {
                "units": "nm",
                "value": 99.59,
              },
            },
          },
          "derivedMeanCountRate": {
            "units": "kcps",
            "value": 2659.4,
          },
          "distributions": [
            {
              "intensity": {
                "mean": {
                  "units": "nm",
                  "value": 119.8,
                },
                "standardDeviation": {
                  "units": "nm",
                  "value": 40.88,
                },
              },
              "number": {
                "mean": {
                  "units": "nm",
                  "value": 77.59,
                },
              },
              "volume": {
                "mean": {
                  "units": "nm",
                  "value": 99.59,
                },
              },
            },
          ],
          "intercept": 0.943,
          "polydispersityIndex": 0.116,
          "zAverage": {
            "units": "nm",
            "value": 108.2,
          },
        },
      },
      "pH": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1143160",
        "software": {
          "name": "Zetasizer Nano",
          "version": "7.11",
        },
      },
    },
    "title": "SD283 - F1, HBG6.4, 0h 3",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          5.8,
          19.1,
          26.5,
          22,
          13.6,
          7.1,
          3.3,
          1.5,
          0.7,
          0.3,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 26.5,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.1,
          8.4,
          15.4,
          18.2,
          16.8,
          13.2,
          9.6,
          6.6,
          4.5,
          3,
          1.6,
          0.6,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 18.2,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.3,
          6.9,
          11.7,
          15,
          16.1,
          15.2,
          12.9,
          9.6,
          6.2,
          3.1,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 16.1,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
  {
    "dataType": "DLS measurement",
    "id": "4",
    "meta": {
      "%Pd Peak 1 (Percent)": 26.7,
      "%Pd Peak 2 (Percent)": 0,
      "%Pd Peak 3 (Percent)": 0,
      "Attenuator": 9,
      "Derived Count Rate (kcps)": 2617.8,
      "Dispersant Name": "Water",
      "Dispersant RI": 1.33,
      "Dispersant Viscosity (cP)": 0.8872,
      "Duration (s)": 10,
      "Intensity Mean (d.nm)": 118.4,
      "Intensity Peak 1 (d.nm)": 118.4,
      "Intensity Peak 2 (d.nm)": 0,
      "Intensity Peak 3 (d.nm)": 0,
      "Intensity Width Peak 1 (d.nm)": 31.66,
      "Intensity Width Peak 2 (d.nm)": 0,
      "Intensity Width Peak 3 (d.nm)": 0,
      "Intensity peak 1 (d.nm)": 118.4,
      "Intensity peak 2 (d.nm)": 0,
      "Intensity peak 3 (d.nm)": 0,
      "Intensity width peak 1 (d.nm)": 31.66,
      "Intensity width peak 2 (d.nm)": 0,
      "Intensity width peak 3 (d.nm)": 0,
      "Intercept": 0.939,
      "Material Absorption": 0.01,
      "Material Name": "Chitosan",
      "Material RI": 1.7,
      "Mean Count Rate (kcps)": 290.6,
      "Measured Intercept": 0.883,
      "Measurement Date and Time": "06 March 2026 14:55:18",
      "Number Mean (d.nm)": 83.53,
      "PdI": 0.09,
      "PdI Width (d.nm)": 32.45,
      "Quality Factor": 0,
      "Record": 4,
      "Result Origin": "Nano series",
      "S/W Version": 7.11,
      "Serial Number": "MAL1143160",
      "Size Runs": 10,
      "T (°C)": 25,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 0.8872,
      "Volume Mean (d.nm)": 103.6,
      "Z-Ave (d.nm)": 108.1,
      "Z-Average (d.nm)": 108.1,
      "cheminfo": {
        "meta": {
          "average": {
            "intensity": {
              "mean": {
                "units": "nm",
                "value": 118.4,
              },
            },
            "number": {
              "mean": {
                "units": "nm",
                "value": 83.53,
              },
            },
            "volume": {
              "mean": {
                "units": "nm",
                "value": 103.6,
              },
            },
          },
          "derivedMeanCountRate": {
            "units": "kcps",
            "value": 2617.8,
          },
          "distributions": [
            {
              "intensity": {
                "mean": {
                  "units": "nm",
                  "value": 118.4,
                },
                "standardDeviation": {
                  "units": "nm",
                  "value": 31.66,
                },
              },
              "number": {
                "mean": {
                  "units": "nm",
                  "value": 83.53,
                },
              },
              "volume": {
                "mean": {
                  "units": "nm",
                  "value": 103.6,
                },
              },
            },
          ],
          "intercept": 0.939,
          "polydispersityIndex": 0.09,
          "zAverage": {
            "units": "nm",
            "value": 108.1,
          },
        },
      },
      "pH": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1143160",
        "software": {
          "name": "Zetasizer Nano",
          "version": "7.11",
        },
      },
    },
    "title": "SD283 - F1, HBG6.4, 0h 4",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          3.3,
          13,
          22.1,
          23.1,
          17.7,
          10.9,
          5.7,
          2.6,
          1,
          0.3,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 23.1,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          4.8,
          11,
          16.4,
          18.4,
          17,
          13.4,
          9.3,
          5.5,
          2.6,
          0.7,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 18.4,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          4.2,
          9.4,
          15.1,
          19.1,
          19.7,
          16.5,
          10.5,
          4.3,
          0.4,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 19.7,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
]
`;

exports[`mxd file snapshot 1`] = `
[
  {
    "dataType": "DLS measurement",
    "id": "1",
    "meta": {
      "Actual Transmission Factor": 100,
      "Analysis Date": "Wednesday, 25 February 2026 16:02:06",
      "Attenuation Factor": 0.0126,
      "Attenuator": 7,
      "CPF": 0,
      "Cell Compensation": 0,
      "Duration (s)": 10,
      "Duration Used (s)": 50,
      "Measurement Date and Time": "Wednesday, 25 February 2026 16:02:06",
      "Measurement Position (mm)": 3,
      "Measurement Status": "Complete",
      "Plate Wells": 0,
      "Record Number": 20,
      "Result Origin": "Nano series",
      "S/W Version": 8.02,
      "Serial Number": "MAL1086580",
      "Size Runs": 10,
      "Target Measurement Duration (s)": 100,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 1.2,
      "Well Column": 0,
      "Well Row": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1086580",
        "software": {
          "name": "Zetasizer Nano",
          "version": "8.02",
        },
      },
    },
    "title": "20260916_SiNP_7 1",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.1,
          11.3,
          23.7,
          26.3,
          19,
          10.5,
          4.7,
          1.8,
          0.5,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 26.3,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.7,
          4.9,
          13.4,
          20.4,
          21.4,
          17.5,
          11.8,
          6.5,
          2.7,
          0.7,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 21.4,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0.8,
          6.3,
          14.2,
          20.5,
          22.2,
          18.8,
          11.9,
          4.8,
          0.5,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 22.2,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
  {
    "dataType": "DLS measurement",
    "id": "2",
    "meta": {
      "Actual Transmission Factor": 100,
      "Analysis Date": "Wednesday, 25 February 2026 16:03:48",
      "Attenuation Factor": 0.0126,
      "Attenuator": 7,
      "CPF": 0,
      "Cell Compensation": 0,
      "Duration (s)": 10,
      "Duration Used (s)": 50,
      "Measurement Date and Time": "Wednesday, 25 February 2026 16:03:48",
      "Measurement Position (mm)": 3,
      "Measurement Status": "Complete",
      "Plate Wells": 0,
      "Record Number": 21,
      "Result Origin": "Nano series",
      "S/W Version": 8.02,
      "Serial Number": "MAL1086580",
      "Size Runs": 10,
      "Target Measurement Duration (s)": 100,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 1.2,
      "Well Column": 0,
      "Well Row": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1086580",
        "software": {
          "name": "Zetasizer Nano",
          "version": "8.02",
        },
      },
    },
    "title": "20260916_SiNP_7 2",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          4.7,
          16.9,
          25.8,
          23.6,
          15.5,
          8.1,
          3.6,
          1.3,
          0.4,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 25.8,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1.7,
          7.8,
          15.8,
          20.5,
          19.8,
          15.5,
          10.2,
          5.6,
          2.4,
          0.7,
          0.1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 20.5,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.2,
          8,
          15.1,
          20,
          20.9,
          17.4,
          11.1,
          4.7,
          0.7,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 20.9,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
  {
    "dataType": "DLS measurement",
    "id": "3",
    "meta": {
      "Actual Transmission Factor": 100,
      "Analysis Date": "Wednesday, 25 February 2026 16:05:30",
      "Attenuation Factor": 0.0126,
      "Attenuator": 7,
      "CPF": 0,
      "Cell Compensation": 0,
      "Duration (s)": 10,
      "Duration Used (s)": 50,
      "Measurement Date and Time": "Wednesday, 25 February 2026 16:05:30",
      "Measurement Position (mm)": 3,
      "Measurement Status": "Complete",
      "Plate Wells": 0,
      "Record Number": 22,
      "Result Origin": "Nano series",
      "S/W Version": 8.02,
      "Serial Number": "MAL1086580",
      "Size Runs": 10,
      "Target Measurement Duration (s)": 100,
      "Temperature (°C)": 25,
      "Type": "Size",
      "Viscosity (cP)": 1.2,
      "Well Column": 0,
      "Well Row": 0,
    },
    "settings": {
      "instrument": {
        "manufacturer": "Malvern Panalytical",
        "model": "Zetasizer",
        "serialNumber": "MAL1086580",
        "software": {
          "name": "Zetasizer Nano",
          "version": "8.02",
        },
      },
    },
    "title": "20260916_SiNP_7 3",
    "variables": {
      "n": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          5.1,
          17.9,
          26.5,
          23.4,
          14.9,
          7.6,
          3.2,
          1.1,
          0.3,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Number",
        "max": 26.5,
        "min": 0,
        "symbol": "n",
        "units": "%",
      },
      "v": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2,
          8.6,
          16.8,
          21.1,
          19.8,
          15.1,
          9.5,
          4.9,
          1.9,
          0.4,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Volume",
        "max": 21.1,
        "min": 0,
        "symbol": "v",
        "units": "%",
      },
      "x": {
        "data": Float64Array [
          0.4,
          0.4632,
          0.5365,
          0.6213,
          0.7195,
          0.8332,
          0.9649,
          1.117,
          1.294,
          1.499,
          1.736,
          2.01,
          2.328,
          2.696,
          3.122,
          3.615,
          4.187,
          4.849,
          5.615,
          6.503,
          7.531,
          8.721,
          10.1,
          11.7,
          13.54,
          15.69,
          18.17,
          21.04,
          24.36,
          28.21,
          32.67,
          37.84,
          43.82,
          50.75,
          58.77,
          68.06,
          78.82,
          91.28,
          105.7,
          122.4,
          141.8,
          164.2,
          190.1,
          220.2,
          255,
          295.3,
          342,
          396.1,
          458.7,
          531.2,
          615.1,
          712.4,
          825,
          955.4,
          1106,
          1281,
          1484,
          1718,
          1990,
          2305,
          2669,
          3091,
          3580,
          4145,
          4801,
          5560,
          6439,
          7456,
          8635,
          10000,
        ],
        "isDependent": false,
        "isMonotonic": 1,
        "label": "Particle diameter",
        "max": 10000,
        "min": 0.4,
        "symbol": "x",
        "units": "nm",
      },
      "y": {
        "data": Float64Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2.6,
          9,
          16.2,
          20.9,
          21.1,
          16.7,
          9.9,
          3.5,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "isDependent": true,
        "isMonotonic": 0,
        "label": "Intensity",
        "max": 21.1,
        "min": 0,
        "symbol": "y",
        "units": "%",
      },
    },
  },
]
`;
